--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,53 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.img__wrap {
+  position: relative;
+  z-index: 1;
+}
+
+.img__description {
+  position: absolute;
+  padding: 20px;
+  top: 0;
+  bottom: 0;
+  top: 50%;
+  width: 100%;
+  left: 0;
+  right: 0;
+  background: #ff4c61d5;
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+
+  /* transition effect. not necessary */
+  transition: opacity .2s, visibility .2s;
+}
+
+.img__descriptions {
+  position: absolute;
+  padding: 20px;
+  top: 0;
+  bottom: 0;
+  top: 50%;
+  left: 0;
+  right: 0;
+  background: #ff4c61d5;
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+
+  /* transition effect. not necessary */
+  transition: opacity .2s, visibility .2s;
+}
+
+.img__wrap:hover .img__description {
+  visibility: visible;
+  opacity: 1;
+}
+
+.img__wrap:hover .img__descriptions {
+  visibility: visible;
+  opacity: 1;
+}
